# amigagcc6ports

./: .gitignore  README.md
cmake/Modules/: CMakeSystemSpecificInformation.cmake  CMakeTestVASMCompiler.cmake  CMakeVASMInformation.cmake  FindOpenAL.cmake  FindOpenGL.cmake  FindThreads.cmake  FindZLIB.cmake  TestBigEndian.cmake
cmake/Modules/Platform/: CMakeVASMCompiler.cmake.in  m68k-amigaos.cmake
expat/: CMakeLists.txt  internal.h
extrasdk/MUI/fd/: muimaster_lib.sfd
extrasdk/MUI/include/clib/: muimaster_protos.h
extrasdk/MUI/include/inline/: muimaster.h
extrasdk/MUI/include/libraries/: mui.h
libde265/: CMakeLists.txt
libde265/dec265/: CMakeLists.txt  dec265.cc
libde265/libde265/: CMakeLists.txt  configparam.cc  de265.cc  deblock.cc  decctx.cc  dpb.cc  dpb.h  en265.cc  fallback-dct.cc  fallback-motion.cc  image-io.cc  image.cc  image.h  intrapred.cc  motion.cc  nal.h  pps.cc  refpic.cc  slice.cc  slice.h  transform.cc  util.cc  visualize.cc  vui.cc
libde265/libde265/encoder/: CMakeLists.txt  encoder-context.cc  encoder-core.cc  encoder-syntax.cc  encoder-types.cc  encoder-types.h  sop.cc
libde265/libde265/encoder/algo/: cb-interpartmode.cc  cb-intra-inter.cc  cb-mergeindex.cc  coding-options.cc  pb-mv.cc  tb-intrapredmode.cc  tb-split.cc  tb-transform.cc
libheif/: CMakeLists.txt  build-emscripten.sh
libheif/examples/: CMakeLists.txt  amigatools.cc  heif_convert.cc  heif_info.cc
libheif/libheif/: CMakeLists.txt  box.cc  plugin_registry.cc  region.cc
libheif/libheif/color-conversion/: yuv2rgb.cc
libheif/scripts/: build-android-libs.sh  check-emscripten-enums.sh  check-go-enums.sh  check-gofmt.sh  check-licenses.sh  configure-fuzzer.sh  cpplint.py  install-ci-linux.sh  install-ci-osx.sh  install-clang.sh  install-emscripten.sh  pre-commit.hook  prepare-ci.sh  run-ci.sh
libheif/tests/: catch.hpp
libjpeg/: CMakeLists.txt  jconfig.h
libpng/: CMakeLists.txt
mame-triumph/: CMakeLists.txt  makefile.amiga  makefile.mame  makefile.mameppc
mame-triumph/fixsrc/: Makefile  fixsrc  fixsrc.c  scandir.c  scandir.h
mame-triumph/include/: cgxhooks.h  db.h  macros.h  moo.h
mame-triumph/include/moo/: db.h  moo.h
mame-triumph/src/amiga/: CMakeLists.txt  amiga037b.c  amiga037b.cpp  amiga037b_filesystem.cpp  amiga037b_joysticks.c  amiga037b_joysticks.cpp  amiga037b_keyboard.cpp  amiga106.cpp  amiga106_audiostream.cpp  amiga106_filesystem.cpp  amiga106_inputs.cpp  amiga106_keyboard.cpp  amiga106_timer.cpp  amiga_inputs.c  amiga_inputs.cpp  amiga_inputs.h  amiga_locale.cpp  audio.c  audio.cpp  audio.h  cgxhooks_re.c  cgxhooks_re.h  cgxhooks_re.s  config.c  config.cpp  config.h  config_v37.cpp  config_v37.h  file.c  file.cpp  file.h  gui.h  gui_gadtools.cpp  gui_mui.c  gui_mui.cpp  gui_mui.h  inputs.c  inputs.h  main.c  main.cpp  (+13 more)
mame-triumph/src/mame/: common.c  usrintrf.c
mame-triumph/src/mame/vidhrdw/: vector.c
mame-triumph/src/mame037b/: CMakeLists.txt  gamedrivers.cmake
mame-triumph/src/mame037b/src/: CMakeLists.txt  cheat.cpp  common.cpp  cpuintrf.cpp  driver.cpp  driver_list.cpp  driver_modules.cpp  gamedrivers.cmake  inptport.cpp  inptport.h  input.cpp  input.h  legacy.h  mame.cpp  mame.h  network.h  profiler.cpp  unzip.cpp  usrintrf.cpp
mame-triumph/src/mame037b/src/odx/: port_wrapper.h
mame-triumph/src/mame106/: CMakeLists.txt  artwork.c  chdman.c  cpuexec.c  cpuintrf.c  cpuintrf.h  fileio.c  gamedrivers.cmake  inptport.c  input.h  mame.c  mame.h  mamecore.h  mamedriv.c  memory.c  osdepend.h  palette.c  palette.h  romload.c  timer.c  unzip.c  usrintrf.c  validity.c
mame-triumph/src/mame106/machine/: generic.c
mame-triumph/tools/: CMakeLists.txt  makToCmake.cpp  mameMakToCmake.cpp
zlib/: CMakeLists.txt  configure  gzguts.h  gzlib.c  gzread.c  gzwrite.c  zlib.h
